--- a/gm/advanced_delving/index.html
+++ b/gm/advanced_delving/index.html
@@ -226,43 +226,64 @@
 <hr/>
 
 <h2>冒險動作 (Adventure Moves)</h2>
-<p class="NoIndent">Adventure moves deal directly with the adventure underway. They can move the action along, change the rewards, or transition from one adventure to another.</p>
-<p>If you’re running a short game, maybe at a convention or game day, you may find that you want to front-load the experience a little more. Here’s a move that covers “the adventure so far” so that you can get straight into a short game in media res.</p>
-<p class="MoveFirstLine">Stalwart Fighter: As if the bandits weren’t bad enough! As if all the sword wounds, bruises and beatings at the hands of your enemies were insufficient—now this. Trapped underground with your adventuring companions when all you wanted was to return to the town and spend your well-earned bounty. No such luck, warrior. Sharpen that sword! Certainly, the others will need your protecting before safety is found. Just like last time. Once more into the breach, right? I swear, one of these fellows must owe you a favor or two by now…</p>
-<p>Have a look around and roll+CHA. ✴On a 10+, choose two party members. ✴On a 7–9, choose just one. ✴On a 6-, you’re surrounded by ingrates.</p>
-<p class="MoveLastLine">At a moment of need, you can cash in a favor owed you by one of the party members chosen. They must change their action to one of your choosing, once. You may not give them an action that would involve them directly taking damage, giving up a magic item they already own or coming to immediate harm. Use it to make them agree with you, or give you that extra ration you want, or giving you their slot in the loot lottery. Leverage is sweet.</p>
-<p class="NoIndent">The most important part of this move is not the roll or the effect, but the information and tone. It sets the stage for a quick adventure and gives the player reading it a starting point to work with. The roll and result here are interesting, but don’t greatly change the flow of the game. Handing out a set of these, one to each player, along with a playbook, is a great way to run a con game.</p>
-<p>You can also adapt the End of Session move to reflect the adventure you’re running. When doing this it’s key that you show the players the new End of Session move. The goal isn’t to keep them in the dark about what earns XP, but to make the XP awards tie directly to this adventure.</p>
-<p class="MoveFirstLine">When you end the session, instead of using the normal end of session questions, use these:</p>
-<ul><li class="li">Did we learn something about the Cult of the Scaled God?</li>
-<li class="li">Did we rescue a captured villager or help defend the village of Secor?</li>
-<li class="Lastli">Did we defeat a major agent of the Cult of the Scaled God?</li></ul>
+<p class="NoIndent">
+	冒險動作被用來直接處理正在進行中的冒險。它們可以推移時間事件的發展、改變獎勵報酬、或從一個冒險過渡到另一個冒險。</p>
+<p>
+	如果你正要主持一場短團，也許在一場TRPG集會或遊戲日，那麼你或許會想要把他們的冒險經歷提前推進一小段。冒險動作正是用來處理這種「到目前為止的冒險故事」，好讓你能使用攔腰法，從故事的中間點開始闡述，直接切入戲劇性的行動場景。</p>
+<div class="Move">
+<p>堅定的戰士: 此情此景──就好像在說那些強盜匪徒還不夠壞一樣，就彷彿因你仇敵之手所造成的劍傷、瘀青、和打擊還遠遠不夠似的。你和你的冒險夥伴們被困在了地底下──就在你們想要打道回府，揮霍你們應得財富的時機點。你們可真不走運，戰士。打磨你的寶劍，不要鬆懈！理所當然，在你們找到可以安歇的場所前，其他人肯定會需要你的保護。就跟上次一樣，再一次挺身衝鋒，是吧？我敢說這些傢伙肯定因此欠你一兩份人情……</p>
+<p class="NoIndent">環顧四周，並擲+魅力。<br/>
+	✴擲出10+時，選擇二個隊伍成員。<br/>
+	✴擲出7-9時，只選擇一個。<br/>
+	✴擲出6-時，你身邊盡是些忘恩負義的傢伙。</p>
+<p class="MoveLastLine">
+	在你需要的時候，你可以要求其中一個你選擇的隊伍成員償還你的恩情。只限一次，他們必須改為採取你所選擇的行動。你不能藉此讓他們採取任何會導致他們直接承受傷害、放棄他們已經擁有的魔法物品、或遭受立即性傷害的行動。使用這個動作來讓他們同意你的意見、取得額外的口糧配給、或把搜刮戰利品的機會讓給你。人情債的滋味可真是甜美。</p>
+</div>
+<p class="NoIndent">
+	這個動作中最重要的部分並不是在擲骰或效果，而是它所提供的情報和氣氛。它為這場快速的冒險故事設置了一個舞台，並為閱讀它的玩家們提供了發想的起點。這個動作中的擲骰以及結果是很有趣，但並不會對遊戲的故事流向有太大的影響。將這些冒險動作與扮演書一起交給玩家，每個玩家各一個，將會是個在TRPG大型集會上主持遊戲的好方法。</p>
+<p>
+	你也可以調整「聚會結束」動作，使它更能反映你們經歷的冒險故事。當你這麼做，則關鍵在於讓玩家們知道新的「聚會結束」動作是怎麼回事。你的目的並不是讓他們對經驗值的獲得方式一無所知，而是使經驗值獎勵能夠直接地與這個冒險緊緊相連。</p>
+<div class="Move">
+<p class="MoveFirstLine">當你們<b>迎來聚會的結束</b>時，使用下列問題來取代原本聚會結束時的提問：</p>
+<ul>
+	<li>我們是否得知了什麼與鱗神教有關的情報？</li>
+	<li>我們是否拯救了被俘虜的村民、或協助保衛了賽科爾村莊的安危？</li>
+	<li>我們是否擊敗了鱗神教的主要代理人？</li></ul></div>
 
-<h3>動作的結構 (Move Structure)</h3>
-<p class="NoIndent">Moves always follow a similar structure. The most basic parts of a move are the trigger (“when…”) and the effect (“then…”). Every move follows this basic format.</p>
-<h3>觸發條件 (Triggers)</h3>
-<p class="NoIndent">Triggers are often fictional actions undertaken by the player characters but they can also be part of character creation or trigger at the beginning or end of a session. Note that a trigger never deals with precise units of time. Don’t write a move that begins “When you start a round adjacent to a dragon.” There’s no rounds (and adjacent is maybe not the best phrasing, as it sounds removed from the fiction of <em>standing next to a damned fire-breathing dragon</em>). Prepare Spells isn’t “When you spend one hour studying your spellbook” for good reason. Time in Dungeon World is a bit fluid, like in a movie where pacing depends on the circumstances. Don’t rely on concrete units either around the table (rounds) or in the fiction (seconds, minutes, days).</p>
-<p>Here are some broad types of triggers:</p>
-<ul><li><strong>When a character takes action</strong>. Examples: Discern Realities, Arcane Art (Bard), Command (Ranger).</li>
-<li><strong>When a character takes action under specific circumstances</strong>. Examples: Hack and Slash, Seeing Red (Fighter), Backstab (Thief).</li>
-<li><strong>When circumstances dictate, no character action</strong>. Examples: Order Hirelings, End of Session.</li>
-<li><strong>When a character uses a thing</strong>. Examples: Magic items, Heirloom (Fighter).</li>
-<li><strong>From now on</strong>. Examples: Serenity (Cleric), Poisoner (Thief).</li></ul>
-<h3>效果 (Effect)</h3>
-<p class="NoIndent">Moves effects can be anything you can think of; they are as limitless as your ideas. Don’t feel constrained to making rolls, +1 bonuses, and swapping stats. Since all moves flow from the fiction, a fictional effect like “They treat you as a friend” is just as powerful and useful as +1 forward—maybe more so.</p>
-<p>Here are some broad types of effects, any given move may use more than one of them:</p>
-<ul><li><strong>Roll</strong>. Examples: Defy Danger, Cast a Spell (Wizard), Called Shot (Ranger).</li>
-<li><strong>Substitute stats</strong>. Examples: Dwarf (Fighter).</li>
-<li><strong>Negate damage</strong>. Examples: Man's Best Friend (Ranger).</li>
-<li><strong>Give a bonus or penalty, forward or ongoing.</strong> Examples: Underdog (Thief), Smite (Paladin).</li>
-<li><strong>Deal or heal damage</strong>. Examples: Volley, Backstab (Thief), Arcane Art (Bard).</li>
-<li><strong>Choose options</strong>. Examples: Spout Lore, Discern Realities, Ritual (Wizard).</li>
-<li><strong>Hold &amp; Spend</strong>. Examples: Dominate (Wizard spell), Trap Expert (Thief).</li>
-<li><strong>Ask &amp; Answer</strong>. Examples: Charming and Open (Bard), Spout Lore.</li>
-<li><strong>Change circumstances</strong>. Examples: Reputation (Bard).</li>
-<li><strong>Mark experience</strong>. Examples: End of Session.</li>
-<li><strong>Call for more information</strong>. Examples: Parley, Ritual (Wizard).</li>
-<li><strong>Add options</strong>. Examples: Called Shot (Ranger).</li></ul>
+<h3>動作的結構</h3>
+<p class="NoIndent">
+	動作永遠都遵循著相似的結構。一個動作最基本的要素分別為<b>觸發條件（「當……時」）</b>和<b>效果（「則……」）</b>。所有的動作都遵循這個基礎格式。</p>
+
+<h3>觸發條件</h3>
+<p class="NoIndent">
+	觸發條件通常都會是某個玩家角色在故事中所採取的行動，但它也可以是角色創建過程中的一部份、或在聚會的開始或結束。要注意的是，觸發條件永遠不會與那些精確的時間單位打交道。不要寫出像「當你在鄰近一頭巨龍的情況下開始你的回合時」這樣的觸發條件。這個遊戲中並沒有回合的概念（況且「鄰近」可能不是個很好的用詞，因為它聽起來把<em>站在一頭該死的噴火巨龍身旁</em>這個情境的故事性給抽離了）。準備法術動作之所以沒有寫成「當你花費一小時的時間研究你的法術書時」也有著充分的理由。時間在地城世界中的流逝並不固定，就像電影一樣，時間流動的步調相當取決於當下的情境而定。不要使用具體的時間單位，無論遊戲層面上的（回合、輪）或故事中的（秒、分鐘、天）。</p>
+<p>
+	以下是一些常見的觸發條件類型：</p>
+<ul>
+	<li><strong>當角色採取某個行動</strong>。 範例: 審視現狀, 秘奧藝術 (吟遊詩人), 命令 (遊俠).</li>
+	<li><strong>當角色在特定情境下採取某個行動</strong>。 範例: 砍劈, 紅眼酣戰 (戰士), 背刺 (盜賊).</li>
+	<li><strong>當某個情境規定時，不涉及角色行動</strong>。 範例: 命令僱工, 聚會結束.</li>
+	<li><strong>當角色使用某個物品時</strong>。 範例: 魔法物品, 傳家之寶 (戰士).</li>
+	<li><strong>從此之後</strong>。 範例: 沉著心 (牧師), 施毒者 (盜賊).</li></ul>
+
+<h3>效果</h3>
+<p class="NoIndent">
+	動作的效果可以是任何你所能想到的一切；它們就跟你的想像力一樣沒有任何限制。不要覺得效果就只能被限制在擲骰、+1 加值、或交換屬性上。由於所有的動作都是以故事為基底，因此即使是故事性的效果，像「他們將把你當作朋友對待」就跟「下次擲骰 +1」這類機制性的效果一樣強大且有用──或甚至更勝於此。</p>
+<p>
+	以下是一些常見的效果類型，任何現有的動作都可能使用了其中一個或多個這些效果：</p>
+<ul>
+	<li><strong>擲骰</strong>。 範例: 面對危險, 施放法術 (法師), 瞄準射擊 (遊俠).</li>
+	<li><strong>使用替代屬性</strong>。 範例: 矮人 (戰士).</li>
+	<li><strong>抵銷傷害</strong>。 範例: 人類最好的朋友 (遊俠).</li>
+	<li><strong>賦予加值或減值，僅下次或持續</strong>。 範例: 敗犬掙扎 (盜賊), 重斬 (聖武士).</li>
+	<li><strong>造成或治療傷害</strong>。 範例: 射擊, 背刺 (盜賊), 秘奧藝術 (吟遊詩人).</li>
+	<li><strong>選擇選項</strong>。 範例: 憶述見聞, 審視現狀, 儀式 (法師).</li>
+	<li><strong>獲得 &amp; 消耗掌握</strong>。 範例: 支配術 (法師法術), 陷阱專家 (盜賊).</li>
+	<li><strong>詢問 &amp; 回答</strong>。 範例: 敞開心胸 (吟遊詩人), 憶述見聞.</li>
+	<li><strong>改變環境</strong>。 範例: 聲譽 (吟遊詩人).</li>
+	<li><strong>標記經驗值</strong>。 範例: 聚會結束.</li>
+	<li><strong>獲得更多的情報</strong>。 範例: 談判, 儀式 (法師).</li>
+	<li><strong>增加選項</strong>。 範例: 瞄準射擊 (遊俠).</li></ul>
 <hr/>
 
 <h2>改變基礎規則 (Changing the Basics)</h2>
