--- a/moves_discussion/index.html
+++ b/moves_discussion/index.html
@@ -420,7 +420,7 @@
 <p class="NoIndent">
 	當你<strong>進行某個動作時身上承擔著過多的重量</strong>，則你可能會因負重而遭受阻礙。如果你攜帶物品的重量：</p>
 	<ul>
-		<li>低於或等於你的負載上限，你不會因此承受罰值。</li>
+		<li>低於或等於你的負載上限，你不會因此承受減值。</li>
 		<li>低於或等於你的負載上限+2，你的擲骰獲得持續-1，直到你減輕你的負重。</li>
 		<li>超過你的負載上限+2，你必須做出選擇：你必須捨棄至少 1 重量的物品並在擲骰獲得-1，或者，你的擲骰自動失敗。</li>
 	</ul></div>
