--- a/appendices/teaching/index.html
+++ b/appendices/teaching/index.html
@@ -113,7 +113,7 @@
           <div class="col-md-8 col-md-offset-1">
              
 <h1>遊戲教學</h1>
-<p class="NoIndent">既然你已經熟讀過這本規則，那麼負責教導其他人如何遊玩這款遊戲的重責大人，就很有可能會落在你身上，無論對象是有過經驗的角色扮演玩家、或是那些第一次接觸這個嗜好的新手都一樣。在設計這款遊戲的整個過程中，我們有很多與來自不同背景的玩家們一起遊玩的機會，而在這之中，我們也發現了幾個在遊戲教學時頗能派上用場的訣竅。</p>
+<p class="NoIndent">既然你已經熟讀過這本規則，那麼負責教導其他人如何遊玩這款遊戲的重責大任，就很有可能會落在你身上，無論對象是有過經驗的角色扮演玩家、或是那些第一次接觸這個嗜好的新手都一樣。在設計這款遊戲的整個過程中，我們有很多與來自不同背景的玩家們一起遊玩的機會，而在這之中，我們也發現了幾個在遊戲教學時頗能派上用場的訣竅。</p>
 
 <hr/>
 <h2>推銷它！</h2>
